<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activiy_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.MainActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/cityu_icon"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_nav_main"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="25sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_nav_affiliate"
        android:textStyle="italic"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"/>

    <EditText android:id="@+id/et_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80sp"
        android:layout_marginBottom="40sp"
        android:textSize="25sp"
        android:inputType="text"
        android:hint="@string/ip_hint"/>

    <EditText android:id="@+id/et_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:inputType="text"
        android:hint="@string/port_hint"/>

    <Button android:id="@+id/btn_connect"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="90dp"
        android:enabled="false"
        android:text="@string/connect_btn"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:background="@color/button_bkg"/>

</LinearLayout>